...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars" />
...
